added terms and refactored code to consolidate search for list of terms

--- a/app_notebook.ipynb
+++ b/app_notebook.ipynb
@@ -62,6 +62,79 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Try BEU's  all natural whipped body butter, its good enough to eat!\n",
+      "https://t.co/Qr3ABuLngO #BlackGirlMagic #fb… https://t.co/LqRbvIVpiL\n",
+      "I finally saw #HiddenFigures, the never before told story of the women representing #NASA. I have never been prouder of #BlackGirlMagic.\n",
+      "Age is such a non-factor amongst these beautiful, brown bombshells! 😍👑 #goals #gorgeous #glamour #beauty… https://t.co/AeJhmMP2Ws\n",
+      "Go head witcho cute ass *Trey Songz voice* I can't get over herrrrr #dollstagram #melaninpoppin… https://t.co/YfOgBjooZr\n",
+      "Omg! Man this is so true! !!  😂😂😂 ain't she a cutie pie tho! \n",
+      "#blackdontcrack #blackgirlsrock… https://t.co/2l2nmzfqwi\n",
+      "#blackgirlsrock #blackgirlmagic #womeninbusiness https://t.co/x3SitkNzuH\n"
+     ]
+    }
+   ],
+   "source": [
+    "terms = [ \"#BlackGirlMagic\", \"#MelaninPoppin\", \"#BlackGirlsRock\", \"#BlackGirlsCode\", \"#CarefreeBlackGirl\"]\n",
+    "for term in terms: \n",
+    "\n",
+    "    response = twitter.search(q=term + '-filter:retweets', result_type=\"recent\", count=2)\n",
+    "\n",
+    "    try:\n",
+    "    # [twitter.retweet(id = tweet[\"id_str\"]) for tweet in response['statuses']]\n",
+    "    # used for test purposes to show text of tweets in response\n",
+    "        [print(tweet[\"text\"]) for tweet in response['statuses']]\n",
+    "        # [tweet['text'] for tweet in response['statuses']]\n",
+    "    # [twitter.retweet(id = tweet[\"id_str\"]) for tweet in response['statuses'] if tweet['retweet_count'] > 1]\n",
+    "    except TwythonError as e:\n",
+    "        print(e)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "819389180920864768\n",
+      "819388700849278976\n",
+      "819388407554179072\n",
+      "819388082311102467\n",
+      "819388029995544576\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[None, None, None, None, None]"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response = twitter.search(q='\"#BlackGirlMagic\"  -filter:retweets', result_type=\"recent\", count=5)\n",
+    "[print(tweet[\"id_str\"]) for tweet in response['statuses']]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
