exclude RTing tweets that contain Instagram

--- a/app_notebook.ipynb
+++ b/app_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 94,
    "metadata": {
     "collapsed": false
    },
@@ -11,8 +11,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "819370525327839232\n",
-      "819369146433622016\n"
+      "#tbt to getting ready for saunjay_ party and then going back to bed 😩😩😩 #blackgirlmagic #toronto… https://t.co/79dJg6rSDt\n",
+      "Natural beauty!!!\n",
+      "#hylensphotography #canon #lens #natural #naturalhair #blackgirlmagic… https://t.co/auPmrB7H89\n",
+      "What wonderful things #blackwomen  #contribute to the #World..... #blackgirlmagic #history must… https://t.co/9fbZFkP3Cu\n",
+      "Tonight's #sketch - I'm loving these bald ones... \n",
+      "\n",
+      "#blackgirlmagic #afropunk #illustration… https://t.co/gbXYPG5x6Y\n",
+      "It's that #blackgirlmagic\n",
+      "\n",
+      "Tracee Ellis Ross 44 years old, wins a Golden Globe exactly 44 years… https://t.co/iZl8IUmooI\n"
      ]
     }
    ],
@@ -23,12 +31,12 @@
     "twitter = twython.Twython(api_key, api_secret, access_token, token_secret)\n",
     "\n",
     "# return tweets cotaining #BlackGirlMagic, mix of recent and popular tweets\n",
-    "response = twitter.search(q='\"#BlackGirlMagic\"  -filter:retweets', result_type=\"recent\", count=5)\n",
+    "response = twitter.search(q='\"#BlackGirlMagic\"  -filter:retweets -url:instagram', result_type=\"recent\", count=5)\n",
     "#if r['retweet_count'] for r in responses['statuses']> 10:\n",
     "# [r['text'] for r in response['statuses'] if r['retweet_count'] > 1]\n",
     "try: \n",
-    "    [print(tweet[\"id_str\"]) for tweet in response['statuses']]\n",
-    "    [twitter.retweet(id = tweet[\"id_str\"]) for tweet in response['statuses']]\n",
+    "    [print(tweet[\"text\"]) for tweet in response['statuses']]\n",
+    "    #[twitter.retweet(id = tweet[\"id_str\"]) for tweet in response['statuses']]\n",
     "    # [twitter.retweet(id = tweet[\"id_str\"]) for tweet in response['statuses'] if tweet['retweet_count'] > 1]\n",
     "except TwythonError as e:\n",
     "    print(e)"
