--- a/app_notebook.ipynb
+++ b/app_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 105,
    "metadata": {
     "collapsed": false
    },
@@ -11,16 +11,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "#tbt to getting ready for saunjay_ party and then going back to bed 😩😩😩 #blackgirlmagic #toronto… https://t.co/79dJg6rSDt\n",
-      "Natural beauty!!!\n",
-      "#hylensphotography #canon #lens #natural #naturalhair #blackgirlmagic… https://t.co/auPmrB7H89\n",
-      "What wonderful things #blackwomen  #contribute to the #World..... #blackgirlmagic #history must… https://t.co/9fbZFkP3Cu\n",
-      "Tonight's #sketch - I'm loving these bald ones... \n",
-      "\n",
-      "#blackgirlmagic #afropunk #illustration… https://t.co/gbXYPG5x6Y\n",
-      "It's that #blackgirlmagic\n",
-      "\n",
-      "Tracee Ellis Ross 44 years old, wins a Golden Globe exactly 44 years… https://t.co/iZl8IUmooI\n"
+      "#Nashville #WomensMarchOnWashington @ROHCC1997 #BlackGirlMagic #blackfeminist @somethingwithin https://t.co/JpHvUynJew\n",
+      "Hidden figures is so inspirational #blessed #BlackGirlMagic #BlackGirlsRock #ScientistSuperPower #STEM #STEMwomen\n",
+      "#BlackGirlMagic ✨ https://t.co/5aZGsQC2QZ\n",
+      "@TamikaDMallory Thank you for showing us what fierce, unapologetic #blackgirlmagic looks like.\n",
+      "#WomensMarch #intersectionalfeminism #BLM\n",
+      "@TamikaDMallory #Blackgirlmagic  #WomensMarch\n"
      ]
     }
    ],
@@ -31,7 +27,7 @@
     "twitter = twython.Twython(api_key, api_secret, access_token, token_secret)\n",
     "\n",
     "# return tweets cotaining #BlackGirlMagic, mix of recent and popular tweets\n",
-    "response = twitter.search(q='\"#BlackGirlMagic\"  -filter:retweets -url:instagram', result_type=\"recent\", count=5)\n",
+    "response = twitter.search(q='\"#BlackGirlMagic\"  filter:safe -filter:retweets -instagram -facebook', result_type=\"recent\", count=5)\n",
     "#if r['retweet_count'] for r in responses['statuses']> 10:\n",
     "# [r['text'] for r in response['statuses'] if r['retweet_count'] > 1]\n",
     "try: \n",
